discussion/kv_engine/177064/177064_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46738: Remove FlowControl buffer-size computation code duplicate

Change-Id: If8b598f43d2e5413bc7d74514dcb67cce164d43a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-07-05 08:18:19.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-05 09:11:21.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18661/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:55:25: error: template argument for template type parameter must be a type [clang-diagnostic-error]
    folly::Synchronized<std::set<DcpConsumer*>> consumers;
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/Synchronized.h:563:17: note: template parameter is declared here
template <class T, class Mutex = SharedMutex>
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:55:30: error: no template named "set" in namespace "std"; did you mean "get"? [clang-diagnostic-error]
    folly::Synchronized<std::set<DcpConsumer*>> consumers;
                             ^~~
                             get
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/utility:223:5: note: "get" declared here
    get(std::pair<_Tp1, _Tp2>& __in) noexcept
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18661/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:55:25:
error: template argument for template type parameter must be a type [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18661/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39862/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:55:30:
error: no template named "set" in namespace "std"; did you mean "get"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39862/ )

CMake error: CMakeLists.txt:145 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39862/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21558/ : FAILURE

Failure of GoogleTest "TransportProtocols/DcpConsumerBufferAckTest.DeleteWithValue/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes":

<pre>
[ RUN      ] TransportProtocols/DcpConsumerBufferAckTest.DeleteWithValue/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes
[2022-07-05T08:54:28.823Z] unknown file: Failure
[2022-07-05T08:54:28.823Z] C++ exception with description "Header::getResponse(): Header is not a response" thrown in SetUp().
[2022-07-05T08:54:28.823Z] [  FAILED  ] TransportProtocols/DcpConsumerBufferAckTest.DeleteWithValue/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes, where GetParam() = (Mcbp, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (171 ms)
TransportProtocols/DcpConsumerBufferAckTest.DeleteWithValue/Mcbp_XattrYes_JsonYes_SnappyYes_AlwaysBufferYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21558/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17814/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47447/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19781/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8339/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20903/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8437/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20550/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28937/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
